syntax = "proto3";

package api;

service CloudControllerCopilot {
  rpc AddRoute(AddRequest) returns (AddResponse) {}
}

message AddRequest {
  string processGuid = 1;
  string hostname = 2;
}
message AddResponse {
  bool success = 1;
}
