syntax = "proto3";

import "common.proto";

package api;

service IstioCopilot {
  rpc Health(HealthRequest) returns (HealthResponse) {}
  rpc Routes(RoutesRequest) returns (RoutesResponse) {}

  rpc InternalRoutes(InternalRoutesRequest) returns (InternalRoutesResponse) {}
}

message InternalRoutesRequest {
}

message InternalRoutesResponse {
  repeated InternalRouteWithBackends internal_routes = 1;
}

message InternalRouteWithBackends {
  string hostname = 1;
  string vip = 2;
  BackendSet backends = 3;
}

message RoutesRequest {
}

message RoutesResponse {
  // key is hostname
  map<string, BackendSet> backends = 1;
}

message BackendSet {
  repeated Backend backends = 1;
}

message Backend {
  string address = 1;
  uint32 port = 2;
}
